# TASMANIAN

./: .gitattributes  .gitignore  .jenkins  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README  README.md  SUPPORT.md  WindowsMake.bat  WindowsREADME.txt  index.html  install  install.sh
Addons/: CMakeLists.txt  Makefile  TasmanianAddons.hpp  testAddons.cpp  testBLAS.cpp  testConstructSurrogate.hpp  testCustomTabulated.hpp  testExoticQuadrature.hpp  testLoadUnstructured.hpp  testMPI.cpp  testMPI.hpp  testMPIDREAM.hpp  testMPIDream.hpp  tsgAddonsCommon.hpp  tsgCConstructSurrogate.cpp  tsgCExoticQuadrature.cpp  tsgCLoadNeededValues.cpp  tsgCLoadUnstructuredPoints.cpp  tsgCandidateManager.hpp  tsgConstructSurrogate.hpp  tsgExoticQuadrature.cpp  tsgExoticQuadrature.hpp  tsgLoadNeededValues.hpp  tsgLoadUnstructuredPoints.hpp  tsgMPIConstructGrid.hpp  tsgMPISampleDream.hpp  tsgMPIScatterDREAM.hpp  tsgMPIScatterDream.hpp  tsgMPIScatterGrid.hpp
Config/CMakeIncludes/: CMakeLists.txt  FindTasmanianCudaMathLibs.cmake  FindTasmanianDpcpp.cmake  FindTasmanianMAGMA.cmake  FindTasmanianMagma.cmake  FindTasmanianRocm.cmake  PythonImportTest.py  (+14 more)
DREAM/: CMakeLists.txt  Makefile  TasmanianDREAM.cpp  TasmanianDREAM.hpp  WindowsMakeDREAM.bat  dreamtest_main.cpp  tasdreamBenchmark.cpp  tasdreamBenchmark.hpp  tasdreamExternalTests.cpp  tasdreamExternalTests.hpp  tasdreamTestPDFs.cpp  tasdreamTestPDFs.hpp  tasdream_main.cpp  tdrCorePDF.cpp  tdrCorePDF.hpp  tdrDreamDenseLinearAlgebra.hpp  tdrEnumerates.hpp  tsgDreamCorePDF.hpp  tsgDreamCoreRandom.hpp  tsgDreamEnumerates.hpp  tsgDreamInternalBlas.hpp  tsgDreamLikelihoodCore.hpp  tsgDreamLikelyGaussian.cpp  tsgDreamLikelyGaussian.hpp  tsgDreamSample.hpp  tsgDreamSampleGrid.hpp  tsgDreamSamplePosterior.hpp  tsgDreamSamplePosteriorGrid.hpp  tsgDreamSampleWrapC.cpp  tsgDreamState.cpp  tsgDreamState.hpp
Doxygen/: CMakeLists.txt  Contributors.md  CustomRuleFileFormat.md  DevNotes.md  DoxygenMainPage.hpp  Installation.md  InterfaceCLI.md  InterfaceFortran2003.md  InterfaceFortran90.md  InterfaceLibEnsemble.md  InterfaceMATLAB.md  InterfacePython.md  footer.html  header.html  tasmanian.css
InterfaceFortran/: CMakeLists.txt  Makefile  TasmanianSG.f90  fortester.f90  mpitester.f90  tsgC2Fortran.cpp  tsgC2FortranBridge.f90
InterfaceMATLAB/: CMakeLists.txt  tsgCancelRefine.m  tsgCleanTempFiles.m  tsgCopyGrid.m  tsgCoreTests.m  tsgDeleteGrid.m  tsgDeleteGridByName.m  tsgDifferentiate.m  tsgEstimateAnisotropicCoefficients.m  tsgEvaluate.m  tsgEvaluateHierarchy.m  tsgExample.m  tsgGetCandidateConstructionAnisotropic.m  tsgGetCandidateConstructionSurplus.m  tsgGetDifferentiationWeights.m  tsgGetHCoefficients.m  tsgGetHSupport.m  tsgGetInterpolationWeights.m  tsgGetNeededIndexes.m  tsgGetNeededPoints.m  tsgGetPaths.build.m  tsgGetPaths.in.m  tsgGetPaths.install.m  tsgGetPaths.m  tsgGetPoints.m  tsgGetPointsIndexes.m  tsgGetPolynomialSpaces.m  tsgGetQuadrature.m  tsgGetSurpluses.m  tsgIntegrate.m  tsgListGridsByName.m  tsgLoadConstructedPoints.m  tsgLoadGridFromFile.m  tsgLoadHCoefficients.m  tsgLoadHierarchical.m  tsgLoadValues.m  tsgMakeExoticQuadrature.m  tsgMakeFilenames.m  tsgMakeFourier.m  tsgMakeGlobal.m  (+17 more)
InterfacePython/: CMakeLists.txt  Tasmanian.py  TasmanianAddons.in.py  TasmanianAddons.py  TasmanianConfig.in.py  TasmanianDREAM.py  TasmanianDreamLikely.py  TasmanianDreamSampler.py  TasmanianDreamState.py  TasmanianGradientDescent.py  TasmanianOPT.py  TasmanianParticleSwarm.py  TasmanianSG.in.py  TasmanianSG.py  TasmanianSG.windows.py  example_dream.in.py  example_dream_01.py  example_dream_02.py  example_dream_03.py  example_dream_04.py  example_dream_05.py  example_optimization.in.py  example_optimization_01.py  example_optimization_02.py  example_sparse_grids.in.py  example_sparse_grids_01.py  example_sparse_grids_02.py  example_sparse_grids_03.py  example_sparse_grids_04.py  example_sparse_grids_05.py  example_sparse_grids_06.py  example_sparse_grids_07.py  example_sparse_grids_08.py  example_sparse_grids_09.py  example_sparse_grids_10.py  example_sparse_grids_11.py  sandbox.py  testAcceleration.py  testAddons.py  testBasicIO.py  (+11 more)
InterfaceSwig/: CMakeLists.txt  TasmanianSparseGrid.i  fortranswigtester.f90  mpi.i  swig.sh  tasmanian.i  tasmanian_mpi_swig.i  tasmanian_swig.i  tsgEnumerates.i
InterfaceTPL/: CMakeLists.txt  tplUnitTests.cpp  tplUnitTests.hpp  tpltest_main.cpp  tsgBlasNull.hpp  tsgBlasWrappers.hpp  tsgCudaWrappers.cpp  tsgCudaWrappers.hpp  tsgDpcppWrappers.cpp  tsgDpcppWrappers.hpp  tsgGpuNull.cpp  tsgGpuWrappers.hpp  tsgHipWrappers.cpp  tsgHipWrappers.hpp  tsgMagmaWrappers.hpp  tsgTPLWrappers.hpp
Optimization/: CMakeLists.txt  TasmanianOptimization.hpp  testOptimization.cpp  tsgOptimizationEnumerates.hpp  tsgOptimizationState.cpp  tsgOptimizationState.hpp  tsgParticleSwarm.cpp  tsgParticleSwarm.hpp  tsgParticleSwarmSolver.cpp  tsgParticleSwarmSolver.hpp  tsgSolver.cpp  tsgSolver.hpp
PyObjectTest/: CMakeLists.txt  cpplib.cpp  main.py  pytestmod.py  run.sh
SparseGrids/: CMakeLists.txt  Makefile  TasmanianSparseGrid.cpp  TasmanianSparseGrid.h  TasmanianSparseGrid.hpp  TasmanianSparseGrid.windows.h  TasmanianSparseGrid.windows.hpp  TasmanianSparseGridWrapC.cpp  WindowsMakeSG.bat  gridtestCLICommon.hpp  gridtestExternalTests.cpp  gridtestExternalTests.hpp  gridtestTestFunctions.cpp  gridtestTestFunctions.hpp  gridtestTestHelpers.hpp  gridtestUnitTests.cpp  gridtestUnitTests.hpp  gridtest_main.cpp  tasCudaKernels.cu  tasgridCLICommon.hpp  tasgridExternalTests.cpp  tasgridExternalTests.hpp  tasgridLogs.in.hpp  tasgridTestFunctions.cpp  tasgridTestFunctions.hpp  tasgridTestHelpers.hpp  tasgridTestInterfaceC.cpp  tasgridUnitTests.cpp  tasgridUnitTests.hpp  tasgridWrapper.cpp  tasgridWrapper.hpp  tasgrid_main.cpp  tsgAcceleratedDataStructures.cpp  tsgAcceleratedDataStructures.hpp  tsgAcceleratedHandles.hpp  tsgCacheLagrange.cpp  tsgCacheLagrange.hpp  tsgCoreOneDimensional.cpp  tsgCoreOneDimensional.hpp  tsgCudaBasisEvaluations.hpp  (+45 more)
Tasgrid/: CMakeLists.txt  tasgridLogs.in.hpp  tasgridWrapper.cpp  tasgridWrapper.hpp  tasgrid_main.cpp
(+1845 files in other folders)
